--- a/repositories.yaml
+++ b/repositories.yaml
@@ -23,6 +23,10 @@ repositories:
 
   - type: github-release
     owner: digital-asset
+    repository: daml-dit-integration-symphony
+
+  - type: github-release
+    owner: digital-asset
     repository: dablchess
 
   - type: github-release
@@ -40,7 +44,7 @@ repositories:
   - type: github-release
     owner: digital-asset
     repository: da-marketplace
-  
+
   - type: github-release
     owner: LeventeBarczyDA
     repository: daml-dit-integration-stripe
